--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -341,6 +341,26 @@ which is evidently the same as the time biased random model.
 \subsection{Robustness}
 
 Robustness is mainly regarded in terms of connectivity where reduction into sub components are measured when a percentage of either edges or nodes are removed. Usually the giant component, the largest component, as a percentage of the total network is indicative of partitions. As LN channels are virtual, edge connectivity doesn't make sense, which leaves node connectivity. Scale free networks are more robust than random networks\footnote{Note that time biased random networks is not considered here.} when nodes fail at random, but scale free networks are highly vulnerable if hubs are targeted~\cite{barabasi:robustness}. 
+\vspace*{-0.5cm}
+\begin{figure}[!htb]
+	\hspace*{-1cm} 
+	\centering
+	\includegraphics[width=9.5cm]{images/robustness_accidental.png}
+	\caption{... . The data is retrieved running a c-lightning node~\cite{repository:clightning} on 2019-04-17.
+	}
+	\label{fig:accidental_failure}
+	\hspace*{2mm} 
+\end{figure}
+\vspace*{-1.1cm}
+\begin{figure}[!htb]
+	\hspace*{-1cm} 
+	\centering
+	\includegraphics[width=9.5cm]{images/robustness_coordinated_mait.png}
+	\caption{... . The data is retrieved running a c-lightning node~\cite{repository:clightning} on 2019-04-17.
+	}
+	\label{fig:accidental_failure}
+	\hspace*{2mm} 
+\end{figure}
 
 \subsection{Average shortest path}
 
