--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -51,7 +51,7 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 	\hspace*{-0.7cm} 
 	\centering
 	\includegraphics[width=8cm]{external/Bitcoin_XT_Nodes.png}
-	\caption{\textit{Historic Bitcoin XT node count. As of 2019-02-25 only 3 nodes are still active. Data retrieved from coin.dance\cite{coin:dance}.}}
+	\caption{\textit{Historic Bitcoin XT node count. As of 2019-02-25 only 3 nodes are still active. Data retrieved from coin.dance~\cite{coin:dance}.}}
 	\label{fig:xt_nodes}
 	\hspace*{2mm} 	
 \end{figure}
@@ -64,7 +64,7 @@ The failures of Bitcoin Classic was just the beginning of the scaling debate. Th
 
 Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs~\cite{antonopoulos:segregated:witness:align:economic:incentives}. Although its possible to implement Lightning without a malleability fix, it increases its viability~\cite{song:lightning:malleability}.
 
-The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable~\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix~\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement 2 two days after addressing Maxwell's accusation~\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that Bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and while this information is hearsay at best, the patent sparked many rumors at the time and drove opposition and is one reason for the eventual split.}. 
+The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable~\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix~\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement two days after addressing Maxwell's accusation~\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that Bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and while this information is hearsay at best, the patent sparked many rumors at the time and drove opposition and is one reason for the eventual split.}. 
 
 Segregated Witness When~BIP148\cite{bip:148:uasf:segwit}, a \textit{user-activated-soft-fork} scheduled for 22 August 2017 to activate Segregated Witness, was getting traction among nodes, the opposing party(including aforementioned Bitmain) decided to hard fork bitcoin into two by raising the block size limit. The hard fork took place on the first of August 2017 and created Bitcoin Cash.
 
@@ -101,7 +101,7 @@ Most schemes involve payment channels, where two parties locks in funds between 
 
 Payment channel networks may be constructed in many different ways, a few distinct proposals has been suggested. Decker and Wattenhofer suggested a scheme with Duplex micropayment channels~\cite{decker:wattenhofer:duplex}. The Lightning Network is further discussed in the following chapter. Recently a new scheme was published, the eltoo protocol, which may be integrated into the Lightning stack~\cite{decker:russell:Osuntokun:eltoo}.   
 
-\section{Rational for small blocks}
+\section{Rationale for small blocks}
 
-Bitcoins advantage does not lie in its ability to scale. In fact, centralized solutions can trivially outperform Bitcoin many times over with regard to cost, speed and reliability. It strength lie in transparency, immutability and that it require no trust in any other party at all. These characteristics are both unique and valuable. Solutions to scale the network ought to not compromise the fundamental properties making it worth to scale in the first place. Therefor the cost of participation must remain low, which require that the cost of validating blocks must remain low and thus require small blocks.
+Bitcoins advantage does not lie in its ability to scale. In fact, centralized solutions can trivially outperform Bitcoin many times over with regard to cost, speed and reliability. Its strength lie in transparency, immutability and that it require no trust in any other party at all. These characteristics are both unique and valuable. Solutions to scale the network ought to not compromise the fundamental properties making it worth to scale in the first place. Therefor the cost of participation must remain low, which require that the cost of validating blocks must remain low and thus require small blocks.
 
